appId: com.sts.calculator.dev
---
- launchApp
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Isolated Tricuspid Valve Surgery Risk Calculator"
- waitForAnimationToEnd:
    timeout: 5000
- scrollUntilVisible:
    element:
      id: tab-riskFactors
    direction: DOWN
    timeout: 10000
- tapOn:
    id: tab-riskFactors
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: tab-riskFactors
- waitForAnimationToEnd:
    timeout: 2000
- scrollUntilVisible:
    element:
      id: tab-vascular
    direction: DOWN
    timeout: 10000
- tapOn:
    id: tab-vascular
- waitForAnimationToEnd:
    timeout: 3000
